fix: improve stack trace parsing, fix concurrency issues, and enforce code quality
Core improvements:
- SurefireParser: Find last project frame (actual test method) instead of first
  to correctly identify test files in stack traces with framework intermediaries
- SurefireParser: Add io.netty. to framework suppression list
- SurefireParser: Refactor duplicate failure/error parsing into parseError() helper
- StackTraceCompressor: Filter io.netty. frames from compressed output
- BuildSummary: Return unmodifiable lists from errors()/getErrors() to prevent
  external modification (EI_EXPOSE_REP fix)
- SummaryWriter: Use UTF-8 encoding explicitly via OutputStreamWriter
  (DM_DEFAULT_ENCODING fix)

Gradle plugin fixes:
- LlmCompactorPlugin: Fix race condition in emitSummary() by synchronizing
  on logLines during stream iteration (ConcurrentModificationException fix)
- LlmCompactorPlugin: Remove convention((String) null) anti-pattern,
  use getOrNull() != null for null-safe property checking
- LlmCompactorPlugin: Add javadoc comments to plugin and extension classes
- Convert build.gradle.kts to build.gradle for Java 8 compatibility

Maven extension fixes:
- BuildOutputSpy: Check current project before top-level project for
  submodule configuration support
- BuildOutputSpy: Use StandardCharsets.UTF_8 for PrintStream construction
  (DM_DEFAULT_ENCODING fix)

Maven plugin fixes:
- LlmInstallMojo: Use StandardCharsets.UTF_8 for getBytes() call
  (DM_DEFAULT_ENCODING fix)

Java 8-25 compatibility:
- Create version-specific Gradle wrappers (gradlew-java8, gradlew-java11)
- Java 8→Gradle 8.0.2, Java 11→Gradle 8.5, Java 17+→Gradle 9.4.0
- Create gradlew-smart helper script for automatic Java version detection
- Convert Java 14+ features (text blocks, var, switch expressions) to
  Java 8 compatible code

Testing:
- Add SurefireParserTest.shouldFilterNettyStackFramesAndIdentifyTestFile()
  reproducing the ToolCallStatsControllerIT bug
- Add SurefireParserTest.shouldUseLastProjectF