@@ -5,6 +5,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.HashMap;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
@@ -16,10 +17,12 @@ class AgentContextWriterTest {
   @Test
   void shouldWriteContextFile() throws IOException {
     Path path = tempDir.resolve("agent-context.json");
-    AgentContextWriter.write(Map.of("key", "value"), path);
+    Map<String, Object> map = new HashMap<>();
+    map.put("key", "value");
+    AgentContextWriter.write(map, path);
 
     assertThat(path).exists();
-    String content = Files.readString(path);
+    String content = new String(Files.readAllBytes(path));
     assertThat(content).contains("\"key\" : \"value\"");
   }
 }
