@@ -5,6 +5,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
@@ -15,17 +16,18 @@ class ModuleDetectorTest {
 
   @Test
   void shouldDetectMavenProject() throws IOException {
-    Files.writeString(tempDir.resolve("pom.xml"), "<project/>");
+    Files.write(tempDir.resolve("pom.xml"), "<project/>".getBytes(), StandardOpenOption.CREATE);
     assertThat(ModuleDetector.isMaven(tempDir)).isTrue();
   }
 
   @Test
   void shouldDetectGradleProject() throws IOException {
-    Files.writeString(tempDir.resolve("build.gradle"), "plugins {}");
+    Files.write(
+        tempDir.resolve("build.gradle"), "plugins {}".getBytes(), StandardOpenOption.CREATE);
     assertThat(ModuleDetector.isGradle(tempDir)).isTrue();
 
     Path gradleKts = tempDir.resolve("build.gradle.kts");
-    Files.writeString(gradleKts, "plugins {}");
+    Files.write(gradleKts, "plugins {}".getBytes(), StandardOpenOption.CREATE);
     assertThat(ModuleDetector.isGradle(tempDir)).isTrue();
   }
 
@@ -33,11 +35,11 @@ class ModuleDetectorTest {
   void shouldDetectModules() throws IOException {
     Path mod1 = tempDir.resolve("mod1");
     Files.createDirectories(mod1);
-    Files.writeString(mod1.resolve("pom.xml"), "<project/>");
+    Files.write(mod1.resolve("pom.xml"), "<project/>".getBytes(), StandardOpenOption.CREATE);
 
     Path mod2 = tempDir.resolve("mod2");
     Files.createDirectories(mod2);
-    Files.writeString(mod2.resolve("pom.xml"), "<project/>");
+    Files.write(mod2.resolve("pom.xml"), "<project/>".getBytes(), StandardOpenOption.CREATE);
 
     Path notAMod = tempDir.resolve("notAMod");
     Files.createDirectories(notAMod);
