@@ -3,6 +3,7 @@ package io.llmcompactor.core.extract;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import io.llmcompactor.core.BuildError;
+import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 
@@ -11,7 +12,7 @@ class CompilationErrorExtractorTest {
   @Test
   void shouldExtractErrorsFromMavenLogs() {
     List<String> logs =
-        List.of(
+        Arrays.asList(
             "[INFO] --- compiler:3.13.0:compile (default-compile) @ core ---",
             "[ERROR] /Users/sfk/Developer/project/src/main/java/io/App.java:[20,49] error: method compress in class StackTraceCompressor cannot be applied to given types;",
             "[ERROR] /Users/sfk/Developer/project/src/main/java/io/Service.java:[10,5] error: cannot find symbol",
@@ -38,7 +39,7 @@ class CompilationErrorExtractorTest {
   @Test
   void shouldReturnEmptyListIfNoErrorsFound() {
     List<String> logs =
-        List.of(
+        Arrays.asList(
             "[INFO] --- compiler:3.13.0:compile (default-compile) @ core ---",
             "[INFO] Nothing to compile - all classes are up to date");
 
